0th string interpolation examples

--- a/episodes/0/0.md
+++ b/episodes/0/0.md
@@ -121,28 +121,95 @@ error: attribute 'foo.bar' already defined at /home/stablejoy/code/nix-hour-tran
  ~/code/nix-hour-transcripts/episodes/0  main ?1
 ```
 
-Oh I declared `foo` here already, so maybe that's good to see:
+Yeah and so if we, oh, I didn't save I think, no, oh I declared `foo` here already, so maybe that's good to see
+an error here. `attribute 'foo.bar'` already defined, hold on
 
-```nix
-:!nix-instantiate --eval default.nix
-error: attribute 'foo.bar' already defined at /home/infinisil/test/nix-tutorial/default.nix:3:3..
-```
-
-Foo.. OK, that's an error in nix, geez. It's starting out well (smiles). So apparently it says `foo.bar` is already defined,
+Okay, that's an error in nix, geez. It's starting out well (smiles). So apparently it says `foo.bar` is already defined,
 but then it points to, wait..
 
-Matthew Healy: Is it because of the string one at line 4 or?
+Matthew Healy: Is it because of the string one at line four or?
 
 Silvan: I don't think it should be those, it should be different, I can come to that and see, yeah now, so apparently,
-that is really conflict because if we syntacticly desugar this, I guess it does make sense, you have one foo null,
+that is really conflict because if we syntactically desugar this, I guess it does make sense, you have one foo null,
 and one for the attribute set, all right, so I think it was just like an error in the error message but yeah it's 
-conflict, you can only define an attribute once and so that is sometimes a bit tricky to see, sometimes you have 
-like a big nix file and you do like `foo.bar` somewhere and then at a later time something else with `foo =`, but
-yeah, let's continue on.
+conflict, you can only define an attribute once and so that is sometimes a bit tricky to see:
 
-We can, some other values, integers, we also can do operations with integers like addition, `int = 10 + 10;`,
-division, `int = 10 + 2 / 3`, subtraction, `int = 10 + 2 / 3 - 10;`. Integer division (`/`), is like, it doesn't use
-floats, this (`2 / 3`) would get zero here. And here we are coming into lazy evaluation for the first time:
+```nix
+{
+    foo = null;
+    #"foo.bar" = null;
+
+    foo.bar = null;
+    # syntactic sugar for:
+    # foo = {
+    #   bar = null;
+    # };
+}
+```
+
+sometimes you have like a big nix file and you do like `foo.bar` somewhere and then at a later time 
+something else with `foo =`, but yeah, let's continue on.
+
+We can, some other values, integers:
+
+```nix
+int = 10;
+```
+
+We also can do operations with integers like addition:
+
+```nix
+int = 10 + 2;
+```
+
+Division:
+
+```nix
+int = 10 + 2 / 3;
+```
+
+Subtraction: 
+
+```nix
+int = 10 + 2 / 3 - 10;
+```
+
+Integer division (`/`), is like, it doesn't use floats, this (`2 / 3`) would get zero here. 
+
+```nix
+❯ nix-instantiate --eval default.nix
+error: attribute 'foo.bar' already defined at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:3:5
+       at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:6:5:
+            5|
+            6|     foo.bar = null;
+             |     ^
+            7|     # syntactic sugar for:
+```
+
+Oh, we still have this error, right, let's do like `fooz`:
+
+```nix
+# Attribute set
+{
+    foo = null;
+    "foo.bar" = null;
+
+    fooz.bar = null;
+    # syntactic sugar for:
+    # foo = {
+    #   bar = null;
+    # };
+
+    int = 10 + 2 / 3 - 10;
+}
+```
+
+```nix
+❯ nix-instantiate --eval default.nix
+{ foo = null; "foo.bar" = null; fooz = <CODE>; int = <CODE>; }
+```
+
+And here we are coming into lazy evaluation for the first time:
 
 ```nix
 # Attribute set
