0th re-edit selectors and functions

--- a/episodes/0/0.md
+++ b/episodes/0/0.md
@@ -209,27 +209,9 @@ Oh, we still have this error, right, let's do like `fooz`:
 { foo = null; "foo.bar" = null; fooz = <CODE>; int = <CODE>; }
 ```
 
-And here we are coming into lazy evaluation for the first time:
-
-```nix
-# Attribute set
-{
-    foo = null;
-    "foo.bar" = null;
-
-    fooz.bar = null;
-
-    int = 10 + 2 / 3 - 10;
-}
-```
-
-```nix
-:!nix-instantiate --eval default.nix
-{ foo = null; "foo.bar" = null; fooz = <CODE>; int = <CODE>; }
-```
-
-So if we just do the `nix-instantiate --eval` it shows like a `<CODE>` here which means that it hasn't evaluated this
-fully. This is a bit of a detail to how it is implemented but we can just add a `--strict` here `nix-instantiate --eval --strict`
+All right, and here we are coming into lazy evaluation for the first time. So if we just do 
+the `nix-instantiate --eval` it shows like a `<CODE>` here which means that it hasn't evaluated this
+fully. This is a bit of a detail to how it is implemented but we can just add a `--strict` here
 to force it to evaluate the whole thing, so then you can see the full values here:
 
 ```nix
@@ -242,6 +224,24 @@ but if you just add a, like a dot, `10.0`, like it converts the whole
 expression to a floating thing:
 
 ```nix
+# Attribute set
+{
+    foo = null;
+    "foo.bar" = null;
+
+    fooz.bar = null;
+    # syntactic sugar for:
+    # foo = {
+    #   bar = null;
+    # };
+
+    int = 10 + 2 / 3 - 10;
+
+    floats = 10.0 + 2 / 3 - 10;
+}
+```
+
+```nix
 :!nix-instantiate --eval --strict
 { floats = 0; foo = null; "foo.bar" = null; fooz = { bar = null; }; int = 0; }
 ```
@@ -250,21 +250,40 @@ Or, this part, `2.0`, I think you need here as well, like if there is at least o
 pipeline it turns it into a float:
 
 ```nix
+floats = 10.0 + 2.0 / 3 - 10.0;
+```
+
+```nix
 :!nix-instantiate --eval --strict 
 { floats = 0.666667; foo = null; "foo.bar" = null; fooz = { bar = null; }; int = 0; }
 ```
 
 All right, there is a weird thing going on where it only prints the first six digits, `0.666667`, which is
-often times a bit inaqurate, but, something to fix in nix. Then some other, what do we have, we have
+often times a bit inacurate, but, something to fix in nix. Then some other, what do we have, we have
 floats, we have strings of course:
 
 ```nix
 str = "foo bar";
 ```
 
-Then strings can have interpolation. Certainly we need variables for this group so let's look at variables.
-So variables, we can do a let in statement to declare variables so we can say, let `someVariable = 10;` 
-in then the expression we want to evaluate with that variable in scope and we can say
+Then strings can have interpolation. So actually we need variables for this first so let's look at variables.
+So variables, we can do a let in statement to declare variables:
+
+```nix
+variables = 
+  let
+  in
+```
+
+So we can say:
+
+```nix
+variables =
+  let someVariable = 10;
+  in
+```
+
+and then the expression we want to evaluate with that variable in scope and we can say
 `someVariable + 1;`
 
 ```nix
@@ -314,7 +333,7 @@ Of course, we can do then more complicated operations in here, that's any nix ex
 needs a string so if we were to evaluate this:
 
 ```nix
-interpolation'' =
+interpolation' =
   let 
     a = 10;
     b = 20;
@@ -322,35 +341,110 @@ interpolation'' =
 ```
 
 ```nix
-:!nix-instantiate --eval --strict
-error: cannot coerce an integer to a string
-...
+❯ nix-instantiate --eval --strict
+error: attribute 'interpolation'' already defined at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:24:3
+       at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:28:3:
+           27|
+           28|   interpolation' =
+             |   ^
+           29|     let
 ```
 
-Yeah, so this says cannot coerce an integer to a string, makes sense, we, there are builtin functions in nix
-which we can call from anywhere so one of these functions is `toString`, this converts pretty much anything
-to a string with some weird behaviour as well, `${ toString (a + b) }";`, parenthesis to make sure it doesn't 
-just convert the first one and then this should work, (returns `interpolation'' = "Hello, 30";`), right
-so `toString` useful builtin function. 
+Oh, interpolation already defined, let's do like this, (`interpolation''`):
 
-There is some, like let's use `toStringExample = toString false;`, so this is some weird behaviour,
-to string of false, oh actually let's do, it's kind of hard to see the output here, (returns `toStringExample = "";`)
-but if we look at this, it turns into the empty string, and that comes from bash, like yeah, makes it simple to
-have that work for bash:
+```nix
+❯ nix-instantiate --eval --strict
+error:
+       … while evaluating the attribute 'interpolation'''
+         at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:28:3:
+           27|
+           28|   interpolation'' =
+             |   ^
+           29|     let
+
+       … while evaluating a path segment
+         at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:32:16:
+           31|       b = 20;
+           32|     in "Hello, ${a + b}";
+             |                ^
+           33| }
+
+       error: cannot coerce an integer to a string: 30
+```
+
+Yeah, so this says `cannot coerce an integer to a string`, makes sense, we, there are builtin functions in nix
+which we can call from anywhere so one of these functions is `toString`, this converts pretty much anything
+to a string:
+
+```nix
+interpolation'' =
+  let
+    a = 10;
+    b = 20;
+  in "Hello, ${ toString (a + b) }";
+```
+
+with some weird behaviour as well, parenthesis to make sure it doesn't 
+just convert the first one and then this should work:
+
+```nix
+❯ nix-instantiate --eval --strict
+{ floats = 0.666667; foo = null; "foo.bar" = null; fooz = { bar = null; }; int = 0; interpolation = "Hello, Silvan Mosberger"; interpolation' = "Hello, Silvan Mosberger"; interpolation'' = "Hello, 30"; variables = 11; }
+```
+
+Right so `toString` useful builtin function. There is some, like let's use `toStringExample = toString false;`
+Let's do like, so this is some weird behaviour, but `toString` of `false`:
 
 ```nix
 toStringExample = toString false;
-  -- returns toStringExample = "";
-toStringExample = toString true;
-  -- returns toStringExample = 1;
+```
+
+oh actually let's do, it's kind of hard to see the output here:
+
+```nix
+❯ nix-instantiate --eval --strict
+{ floats = 0.666667; foo = null; "foo.bar" = null; fooz = { bar = null; }; int = 0; interpolation = "Hello, Silvan Mosberger"; interpolation' = "Hello, Silvan Mosberger"; interpolation'' = "Hello, 30"; toStringExample = ""; variables = 11; }
+```
+
+But if we look at this, (`toStringExample = "";`) it turns into the empty string.
+
+Matthew H.: Right.
+
+Silvan: And that comes from bash, like yeah, makes it simple to have that work for bash:
+
+```nix
+toStringExample = toString false;
+toStringExample' = toString true;
+```
+
+```nix
+nix-instantiate --eval --strict
+{ floats = 0.666667; foo = null; "foo.bar" = null; fooz = { bar = null; }; int = 0; interpolation = "Hello, Silvan Mosberger"; interpolation' = "Hello, Silvan Mosberger"; interpolation'' = "Hello, 30"; toStringExample = ""; toStringExample' = "1"; variables = 11; }
 ```
 
 Empty string and one. Yeah, but it's, it works for integers, but it also works for other things but let's get
-to that later. Then what other basic things do we have. Right of course, we have attribute access or 
+to that later. Then what other basic things do we have. Right, we have of course, we have attribute access or 
 `attributeSelectors = ` is maybe the right way, the right word, so let's say we define some attribute set here,
-let's say call it `foo = `, we can also use the dot syntax here, `foo.bar`, so `foo.bar.baz = 10;`, let's also do
-like `foo.bar.qux = 20;`, right, internally nix combines these into single ones so this should be valid, and so
-then we can also access the attributes of course so we can say access `in foo.bar.baz`, that's how you access
+let's say call it `foo = `, we can also use the dot syntax here, `foo.bar`:
+
+```nix
+attributeSelectors =
+  let
+    foo.bar
+```
+
+So `foo.bar.baz = 10;`, let's also do like `foo.bar.qux = 20;`:
+
+```nix
+attributeSelectors =
+  let
+    foo.bar.baz = 10;
+    foo.bar.qux = 20;
+  in
+```
+
+Right, internally nix combines these into single ones so this should be valid, and so
+then we can also access these attributes of course so we can say access `foo.bar.baz`, that's how you access
 these attributes again. So this just evaluates to 10.
 
 ```nix
@@ -373,10 +467,48 @@ attributeSelectors =
   in foo.bar.baz;
 ```
 
-All right, so this works. We can also do defaulting, `attributeSelectorsDefaulting`, where, let's say we access,
-we try to access an attribute that doesn't exist `foo.bar.baz.hello`, now if we try to evaluate this we get,
-`error: attribute 'hello' missing`, and so what we can do as a fallback is to you the `or` operator and we can say
-`or 30`. This means that if this attribute doesn't exist just return 30.
+All right, so this works. We can also do defaulting:
+
+```nix
+attributeSelectorsDefaulting = 
+  let
+    foo = {
+      bar.baz = 10;
+      bar.qux = 20;
+    };
+  in foo.bar.hello;
+```
+
+Where, let's say we access, we try to access an attribute that doesn't exist `foo.bar.baz.hello`, 
+now if we try to evaluate this we get:
+
+```nix
+❯ nix-instantiate --eval --strict
+error:
+       … while evaluating the attribute 'attributeSelectors''
+         at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:47:3:
+           46|
+           47|   attributeSelectors' =
+             |   ^
+           48|     let
+
+       … while evaluating the attribute 'bar.hello'
+         at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:50:9:
+           49|       foo = {
+           50|         bar.baz = 10;
+             |         ^
+           51|         bar.qux = 20;
+
+       error: attribute 'hello' missing
+       at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:53:8:
+           52|       };
+           53|     in foo.bar.hello;
+             |        ^
+           54| }
+```
+
+`attribute 'hello' missing` and so what we can do as a fallback is to use the `or` operator and we can say
+`or 30;`. This means that if this attribute doesn't exist just return 30.
 
 ```nix
 attributeSelectorsDefaulting =
@@ -388,36 +520,84 @@ attributeSelectorsDefaulting =
   in foo.bar.baz.hello or 30;
 ```
 
-If we do this, we get 30 here, `attributeSelectorsDefaulting = 30;`. That also works kind of nested, that
-almost works for anything actually so you could say `in foo.bar.hello.foo.bar or 30;`, that also works. Yes,
+If we do this, we get 30 here:
+
+```nix
+❯ nix-instantiate --eval --strict
+{ attributeSelectors = 10; attributeSelectors' = 30; floats = 0.666667; foo = null; "foo.bar" = null; fooz = { bar = null; }; int = 0; interpolation = "Hello, Silvan Mosberger"; interpolation' = "Hello, Silvan Mosberger"; interpolation'' = "Hello, 30"; toStringExample = ""; toStringExample' = "1"; variables = 11; }
+```
+
+That also works kind of nested, that
+almost works for anything actually so you could say like `in foo.bar.hello.foo.bar or 30;`, that also works. Yes,
 all right. That is a common gotcha because the `or` isn't the binary `or` operator, those two exist.
 
-Let's do like `booleanOps = (true && false) || (true -> false);`, and this one we have implication `true -> false`,
+Let's do like:
+
+```nix
+booleanOps = true && false
+```
+
+That's the, these kinds of operations, we also have implication `true -> false`:
+
+```nix
+booleanOps = (true && false) || (true -> false);
+```
+
 and the implication is really just if the left one is true then the right one needs to be true as well, but can be
-desugared to the, to this I believe `(!true || false);`, yeah it's sometimes useful. Are there any other? Oh there
-is `not` of course, a exclamation mark is not, `!`, `(true && ! false)`, all right so we have that, let's see 
+desugared to the, to this I believe:
+
+```nix
+booleanOps = (true && false) || (!true || false);
+```
+
+yeah it's sometimes useful. Are there any other? Oh there
+is `not` of course, a exclamation mark is not, `!`:
+
+```nix
+booleanOps = (true && ! not) || (true -> false);
+```
+
+all right so we have that, let's see 
 what would be next. We have string interpolation, we have this, variables.. functions I guess would be good next step.
 
-So you declare functions with a colon, `someFun = x:`, so declare the name of the function argument, then a colon, and then
-let's say, let's do return `x + 1;`, `x: x + 1;`, so that's like, in python it would be, do I know python? 
-`def someFun(x): return x + 1..` Matthew H.: Looks good, I don't know python. 
+So you declare functions with a colon:
+
+```nix
+someFun = x:
+```
+
+so declare the name of the function argument, then a colon, and then
+let's say, let's do return `x + 1;`:
 
 ```nix
 someFun = x: x + 1;
 ```
 
-And then if you want to take multiple arguments you just kind of, well one of the ways you can do it is to just to do like this,
-`someFun' = x: y: x + y;`, kind of just take an argument, `x`, return a function `(y: x + y)` so this is just this, and then
+So that's like, in python it would be, do I know python? `# def someFun(x): return x + 1..` 
+
+Matthew H.: Looks good, I don't know python. 
+
+And then if you want to take multiple arguments you just kind of, well one of the ways you can do it is to just to do like this:
+
+```nix
+someFun' = x: y: x + y;
+```
+
+Kind of just take an argument, `x`, return a function `(y: x + y)` so this is just this, and then
 you use currying to apply this so let's do like:
 
 ```nix
-someFun = 
-  let f = x: x + 1;
-  in f 1;
-
 someFun' =
   let f = x: y: x + y;
   in f 1 2;
+```
+
+And here:
+
+```nix
+someFun =
+  let f = x: x + 1;
+  in f 1;
 ```
 
 So this, are you somewhat familiar with functional programming?
@@ -435,13 +615,26 @@ Matthew H.: Yes, yeah.
 Silvan: Nice, nice.
 
 Yes, so this is one way to apply multiple arguments. Another is to, arguments can be, you can take an attribute set or
-destructure an attribute set as an argument so let's do `someAttrs = let f = {`, so the way you can do this is by kind
-of taking an attribute set here so let's say we have `{ x, y }: x + y; in` and so this is a function that takes an attribute 
-set with exactly the attributes `x` and `y` in it so this way we can do `x = 2;`, `y = 3;` and this is generally the
-recommended way to declare functions because you could name arguments this way:
+destructure an attribute set as an argument so let's do:
 
 ```nix
 someFunAttrs = 
+  let f =
+```
+
+So the way you can do this is by kind of taking an attribute set here so let's say we have:
+
+```nix
+someFunAttrs =
+  let f = { x, y }: x + y;
+  in
+```
+
+and so this is a function that takes an attribute set with exactly the attributes `x` and `y` in it 
+so this way we can do `x = 2;`, `y = 3;`:
+
+```nix
+someFunAttrs =
   let f = { x, y }: x + y;
   in f {
     x = 2;
@@ -449,8 +642,17 @@ someFunAttrs =
   };
 ```
 
-And, also it's easy to add additional arguments later in a way that it doesn't brake all the code because if you were
-to add the next one here `let f = x: y: z: x + y; in f 1 2;` it would just brake this and return a function whereas if
+and this is generally the recommended way to declare functions because you could name arguments this way. And, 
+also it's easy to add additional arguments later in a way that it doesn't brake all the code because if you were
+to add the next one here:
+
+```nix
+someFun' =
+  let f = x: y: z: x + y;
+  in f 1 2;
+```
+16.49
+it would just brake this and return a function whereas if
 you add one here, `let f = { x, y, z }:` you get an error where `z` isn't provided.
 
 Now these function arguments have some other capabilities, something else is you can take an elipsis, it's what it's called.
