--- a/episodes/0/0.md
+++ b/episodes/0/0.md
@@ -651,12 +651,35 @@ someFun' =
   let f = x: y: z: x + y;
   in f 1 2;
 ```
-16.49
-it would just brake this and return a function whereas if
-you add one here, `let f = { x, y, z }:` you get an error where `z` isn't provided.
 
-Now these function arguments have some other capabilities, something else is you can take an elipsis, it's what it's called.
-This allows you to take and ignore arbitrary other arguments, `f = {x, y, ...}:` so you could do this, how should we do this:
+it would just brake this (`f 1 2`) and return a function whereas if you add one here:
+
+```nix
+someFunAttrs  = 
+  let f = { x, y, z }: x + y;
+  in f {
+    x = 2;
+    y = 3;
+  };
+```
+
+you get an error where `z` isn't provided.
+
+Now these function arguments have some other capabilities, something else is you can take an elipsis:
+
+```nix
+someFunAttrs  = 
+  let 
+    f = { x, y, z }: x + y;
+    f = { x, y, ...}: x + y;
+  in f {
+    x = 2;
+    y = 3;
+  };
+```
+
+It's what it's called. This allows you to take and ignore arbitrary other arguments, so you could do this, 
+how should we do this, let's do like this:
 
 ```nix
 someFunAttrs' =
@@ -669,16 +692,24 @@ someFunAttrs' =
   };
 ```
 
+We can do this, you can also default..
+
 Matthew H: If you don't have the elipsis does that mean it will only accept an attribute set with exactly `x` and `y` or?
 
 Silvan: Exactly, yeah, if you don't provide one it will get an error, and if you provide something else it will also provide
 an error. 
 
-Matthew: OK
+Matthew: Okay
 
 Silvan: Yep, right, you can also not provide one that's given here if you have a default here, this can be done with a 
-question mark, `f = { x ? , y, ... }:`, so you can do like, let's give `x` a default of `1`, that's again an arbitrary nix
-expression here, `f = { x ? 1, y, ... }: x + y;`, so default of `1`, and then we don't have to pass this, `x = 2`:
+question mark, `f = { x ? , y, ... }:`, so you can do like, let's give `x` a default of `1`, that's a kind of an arbitrary nix
+expression here: 
+
+```nix
+f = { x ? 1, y, ... }: x + y;
+```
+
+So default of `1`, and then we don't have to pass this, `x = 2`:
 
 ```nix
 someFunAttrs' =
@@ -691,16 +722,40 @@ someFunAttrs' =
   };
 ```
 
-There is some arguments against, so these defaults don't work super well sometimes, there's other ways to do this better sometimes,
-let's go over this for now. So what you can also do is capture the entire attribute set that's passed here, kind of, let's say you
-had something like:
+There is some arguments against, so these defaults (`?`), they don't work super well sometimes, there's other ways to do this better sometimes,
+let's go over this for now:
+
+```nix
+someFunAttrs'' =
+  let
+    f = { x ? 1, y, ... }: x + y;
+  in
+    -- x = 2;
+    y = 3;
+    ignored = 4;
+  };
+`
+```
+
+So what you can also do is capture the entire attribute set that's passed here, 
+kind of, let's say you had something like this:
+
+```nix
+someFunAttrs'' =
+  let
+    f = { x ? 1, y, ... }: x + y;
+    g = { x ? 1, y, ... }: x + y;
+# ...
+```
+
+Actually yeah, let's do this:
 
 ```nix
 someFunAttrs'' = 
   let
     f = { x ? 1, y, ... }: x + y;
     g = attrs: attrs.x + attrs.y
-...
+# ...
 ```
 
 Oh yeah, we can like make a whole combination here so these are almost equivalent:
@@ -710,14 +765,33 @@ someFunAttrs'' =
   let
     f = { x ? 1, y, ... }: x + y;
     g = attrs: attrs.x or 1 + attrs.y
+in f {
+  y = 3;
+  ignored = 4;
+};
 ```
 
-So the first one (`f`), explicitly destructures the attribute set, defaults `x` to `1`, `x ? 1`, then adds them, `x + y;`, and this here,
-`attrs.x` accesses `x` and uses the `or` opeartor to default it to `1` and also accesses `y`, `attrs.y`, so that's a good example.
-There is one slight difference where kind of destructuring of the attribute set here happens before the function even starts
-evaluating, `f = { x ? 1, y, ... }:`, whereas here it doesn't happen before, `g = attrs:`, like this is just a variable, it 
-doesn't get evaluated if you don't, without this. But you can also somehow combine these a bit, and that's like, let's do like,
-by giving, using `attrs@`, actually that also works the other way around, this also works:
+So the first one (`f`), explicitly destructures the attribute set, defaults `x` to `1`, `x ? 1`, then adds them, `x + y;`, 
+and this here, `attrs.x` accesses `x` and uses the `or` opeartor to default it to `1` and also accesses `y`, 
+`attrs.y`, so that's a good example.
+
+There is one slight difference where the kind of destructuring of the attribute set here `{ x ? 1, y, ... }` happens before the 
+function even starts evaluating, `f = { x ? 1, y, ... }:`, whereas here `attrs:`, it doesn't happen before, like this is just a variable, 
+it doesn't get evaluated if you don't, without this. But you can also somehow combine these a bit, and that's like, let's do like `fg`
+
+```nix
+someFunAttrs'' =
+  let
+    f = { x ? 1, y, ... }: x + y;
+    g = attrs: attrs.x or 1 + attrs.y
+    fg = 
+in f {
+  y = 3;
+  ignored = 4;
+};
+```
+
+by giving, using `attrs@`, actually that also works the other way around, let's do like, this also works:
 
 ```nix
 fg = attrs@{ x ? 1, y, ...}: x + y;
@@ -727,7 +801,7 @@ gf = { x ? 1, y, ... }@attrs: x + y;
 And then you can, both get this destructuring here and you can catch kind of the attrs itself, and so this way you can,
 you can do this for example `x + attrs.y`, or let's do `x + y + attrs.notIgnored;`, so that works.
 
-Let's go to like if expression as well quick, so very basic `if true then false else true;`:
+Let's go to like if expression as well very quick, so very basic `if true then false else true;`:
 
 ```nix
 ifExpr = if true then false else true;
@@ -744,15 +818,24 @@ And you can provide different types here as well, `else 10;`.
 Matthew H.: Does the condition have to be a boolean, or is, could it be like, are the other values..
 
 Silvan: Yes, it has to be a boolean, anything else doesn't work. Yes and so, we can also kind of combine. Sorry let's make like a,
-let's say we have a function `functionMaybeArgument` where we do something like, so we declare a function, `let f = ` and we say
-the function takes like an x, `{ x, `, a y, `{ x, y }`, and attrs, `{ x, y }@attrs:`, and let's do like, `attrs@: x`, well
-that's also an ellipsis, `{ x, y, ...}@attrs:`, so we can get other arguments, so like `x + y +` and let's do like an
-`if attrs`, oh yeah, we haven't, okay we need to first talk about something else here:
+let's say we have a function `functionMaybeArgument =` where we do something like:
+
+```nix
+functionMaybeArgument =
+  let f =
+```
+
+So we declare a function, and we say the function takes like an x, `{ x, `, a y, `{ x, y }`, 
+and attrs, `{ x, y }@attrs:`, and let's do like, `attrs@: x`, well
+let's add also an ellipsis, `{ x, y, ...}@attrs:`, so we can get other arguments, so like `x + y +` and 
+let's do like an `if attrs`, oh yeah, we haven't, okay we need to first talk about something else here:
 
 ```nix
 # functionMaybeArgument =
 #  let f = { x, y, ... }@attrs: x + y + if attrs
 ```
+
+22:47 time
 
 So we can check for attributes, `checkForAttributes = `, we can do something like this, `let foo.bar.baz = 10;`, and then we can check
 whether it contains a certain attribute without having to access or evaluate it, `in foo ?`, that's with the question mark operator,
