0th functionMaybeArgument, quirks, default.nix update

--- a/episodes/0/0.md
+++ b/episodes/0/0.md
@@ -835,13 +835,24 @@ let's do like an `if attrs`, oh yeah, we haven't, okay we need to first talk abo
 #  let f = { x, y, ... }@attrs: x + y + if attrs
 ```
 
-22:47 time
+So we can check for attributes: 
 
-So we can check for attributes, `checkForAttributes = `, we can do something like this, `let foo.bar.baz = 10;`, and then we can check
-whether it contains a certain attribute without having to access or evaluate it, `in foo ?`, that's with the question mark operator,
-so we can ask, `in foo ? bar`, does this contain `bar`? And this also works with full paths, `bar.baz`, so we can say does this contain
-`bar`, and does `bar` contain `baz`? And so in this case this would evaluate to true. This, `in foo ? bar.foo;` would evaluate to false,
-and so on:
+```nix
+checkForAttributes = 
+```
+
+We can do something like this, `let foo.bar.baz = 10;`, and then we can check
+whether it contains a certain attribute without having to access or evaluate it, (`in foo ?`), that's with the 
+question mark operator, so we can ask does this contain `bar`:
+
+```nix
+checkForAttributes =
+  let foo.bar.baz = 10;
+  in foo ? bar
+```
+
+And this also works with full paths, (`bar.baz`), so we can say does this contain
+`bar`, and does `bar` contain `baz`? And so in this case this would evaluate to true:
 
 ```nix
 checkForAttributes =
@@ -849,7 +860,28 @@ checkForAttributes =
   in foo ? bar.baz;
 ```
 
-And so this way in here we can check whether `attrs ?` contains like `notIgnored`, or `maybeIgnored`, or actually `notIgnored`,
+This would evaluate to false:
+
+```nix
+checkForAttributes =
+  let foo.bar.baz = 10;
+  in foo ? bar.foo;
+```
+
+And so on. And so this way in here:
+
+```nix
+functionMaybeArgument =
+  let f = { x, y, ... }@attrs: x + y + if attrs
+```
+
+we can check whether `attrs ?` contains like `notIgnored`, or `maybeIgnored`, or actually `notIgnored`:
+
+```nix
+functionMaybeArgument =
+  let f = { x, y, ... }@attrs: x + y + if attrs ? notIgnored
+```
+
 so we check whether it contains a `notIgnored`, if it does contain that, `then`, let's go to new line here, ok formatting is a
 bit messy, if attrs contains one of these attributes then we can say, let's also add `attrs.notIgnored else 0;`, in
 `f { x = 1; y = 2; notIgnored = 3; };`, yeah so that works:
@@ -877,8 +909,13 @@ functionMaybeArgument =
 I'm not sure about the precedence here actually (`.. + if ..`), let's try to evaluate this, maybe it will fail:
 
 ```nix
-:!nix-instantiate --eval --strict
-error: syntax error, unexpected IF ..
+❯ nix-instantiate --eval --strict
+error: syntax error, unexpected IF
+       at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:102:17:
+          101|       f = { x, y, ... }@attrs:
+          102|         x + y + if attrs ? notIgnored then attrs.notIgnored else 0;
+             |                 ^
+          103|       f = { x, y, ... }@attrs:
 ```
 
 Yep, that does fail, so we need a parenthesis here:
@@ -894,8 +931,13 @@ functionMaybeArgument =
 ```
 
 ```nix
-:!nix-instantiate --eval --strict
-error: attribute 'f' already defined..
+❯ nix-instantiate --eval --strict
+error: attribute 'f' already defined at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:101:7
+       at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:103:7:
+          102|         x + y + (if attrs ? notIgnored then attrs.notIgnored else 0);
+          103|       f = { x, y, ... }@attrs:
+             |       ^
+          104|         x + y + attrs.notIgnored or 0;
 ```
 
 Oh, and `f`'s already defined:
@@ -910,13 +952,39 @@ functionMaybeArgument =
   in f { x = 1; y = 2; notIgnored = 3; };
 ```
 
+```nix
+❯ nix-instantiate --eval --strict
+{ attributeSelectors = 10; attributeSelectors' = 30; booleanOps = true; checkForAttributes = true; floats = 0.666667; foo = null; "foo.bar" = null; fooz = { bar = null; }; functionMaybeArgument = 6; ifExpr = "Yes"; int = 0; interpolation = "Hello, Silvan Mosberger"; interpolation' = "Hello, Silvan Mosberger"; interpolation'' = "Hello, 30"; someFun = 2; someFun' = 3; someFunAttrs = 5; someFunAttrs' = 4; someFunAttrs'' = 4; toStringExample = ""; toStringExample' = "1"; variables = 11; }
+```
+
 Okay, we have evaluation working again. Yes so that's mainly functions. Something to point out here, it's a bit of a quirk
-in nix is that `functionDefaultsQuirk = let f`, let's say you have a, well it goes a bit too deep maybe already, but let's
-say you have some defaulting argument here, `let f = { x ? 10 }`, and then you do like `@attrs:`, and then you try to check
-whether attrs contains x, `attrs ? x;`, now what's, `in`, it's kind of a interesting question what, or let's also do like,
-`in f {}`, so attrs here, `(@attrs:)`, doesn't do anything regarding like these defaults, `{ x ? 10 }`, attrs is literally
-just the thing you pass in, `f {}`, and so if you don't pass an x here, `{ x ? 10 }`, even though you can like use this 
-`x` variable here, `x attrs ?`, the check here will fail, it won't contain an `x`, let's evaluate this:
+in nix is that
+
+```nix
+functionDefaultsQuirk = 
+  let f
+```
+
+Let's say you have a, well it goes a bit too deep maybe already, but let's
+say you have some defaulting argument here:
+
+```nix
+functionDefaultsQuirk =
+  let f = { x ? 10 }
+```
+
+and then you do like `@attrs:`, and then you try to check whether attrs contains x:
+
+```nix
+functionDefaultsQuirk =
+  let f = { x ? 10 }@attrs: attrs ? x;
+```
+
+Now what's, `in`, it's kind of a interesting question what, or let's also do like,
+`in f {}`, so attrs here, (`@attrs:`), doesn't do anything regarding like these defaults, (`{ x ? 10 }`), 
+`attrs` is literally just the thing you pass in, (`f {}`), and so if you don't pass an x here, (`{ x ? 10 }`), 
+even though you can like use this `x` variable here, (`x attrs ?`), the check here will fail, 
+it won't contain an `x`, let's evaluate this:
 
 ```nix
 functionDefaultsQuirk = 
@@ -925,15 +993,42 @@ functionDefaultsQuirk =
 ```
 
 ```nix
-:!nix-instantiate --eval --strict
-..functionDefaultsQuirk = false;
+❯ nix-instantiate --eval --strict
+{ attributeSelectors = 10; attributeSelectors' = 30; booleanOps = true; checkForAttributes = true; floats = 0.666667; foo = null; "foo.bar" = null; fooz = { bar = null; }; functionDefaultsQuirk = false; functionMaybeArgument = 6; ifExpr = "Yes"; int = 0; interpolation = "Hello, Silvan Mosberger"; interpolation' = "Hello, Silvan Mosberger"; interpolation'' = "Hello, 30"; someFun = 2; someFun' = 3; someFunAttrs = 5; someFunAttrs' = 4; someFunAttrs'' = 4; toStringExample = ""; toStringExample' = "1"; variables = 11; }
 ```
 
 Yeah, it's false, yeah and so that's a bit of a catch. 
 
-Yeah and, maybe we can look at some builtin functions. `builtinsFuns = `, so there is, we have functions like, so pretty much
-all of these are accessible under `builtins.`, that's kind of the builtins operator, also `builtins.toString;` is here, we have,
-oh lists, we haven't checked out lists, I'm just realizing, but yeah, lists are just the normal thing, but something to point out
+Yeah and, maybe we can look at some builtin functions:
+
+```nix
+builtinsFuns =
+  let
+
+  in null;
+```
+
+So there is, we have functions like, so pretty much all of these are accessible under `builtins.` dot, 
+that's kind of the builtins operator, also `builtins.toString;` is here:
+
+```nix
+builtinsFun =
+  let
+    a = builtins.toString;
+  in null;
+```
+We have, oh lists, we haven't checked out lists, I'm just realizing:
+
+```nix
+builtinsFun =
+  let
+    a =  [
+      builtins.toString
+    ];
+  in null;
+```
+27.06 time
+But yeah, lists are just the normal thing, but something to point out
 is that elements are separated by spaces so if we were to make a list of functions here, `a = [ builtins.toString builtins.map ];`
 you'd have to separate them by spaces and not add any commas so:
 
