--- a/episodes/0/0.md
+++ b/episodes/0/0.md
@@ -1028,8 +1028,8 @@ builtinsFun =
   in null;
 ```
 27.06 time
-But yeah, lists are just the normal thing, but something to point out
-is that elements are separated by spaces so if we were to make a list of functions here, `a = [ builtins.toString builtins.map ];`
+But yeah, lists are just the normal thing, but something to point out is that elements are
+separated by spaces so if we were to make a list of functions here, `a = [ builtins.toString builtins.map ];`
 you'd have to separate them by spaces and not add any commas so:
 
 ```nix
@@ -1040,14 +1040,38 @@ a = [
 ];
 ```
 
-There's a whole bunch of these. We can also look at these in nix repl, maybe that's actually a good point to mention, let's switch to the
-nix repl real quick, (`nix repl`), we can, (`nix-repl> builtins`), we also have auto completion here so that's nice, 
-`builtins.` and yeah I can see all the builtins (scrolling through), there is a whole bunch, there is to check the 
-types of expressions, there's like builtins to map attribute sets, oh yeah, that's (`builtins.match`) a regex matching thing,
-string processings, `builtins.false` interesting, (`builtins.toJSON`), to json, there is also from json, to read json
-into a nix attribute set.
+There's a whole bunch of these. We can also look at these in nix repl, maybe that's actually a good point
+to mention, let's switch to the nix repl real quick:
 
-Yeah, I think, (`vim default.nix`), did I get the most of the nix, I don't know, maybe let's use a simple map here, 
+```nix
+❯ nix repl
+Nix 2.24.11
+Type :? for help.
+nix-repl>
+```
+
+We can, we also have auto completion here so that's nice:
+
+```nix
+nix-repl> builtins.
+builtins.abort                          builtins.elem                           builtins.isBool                         builtins.scopedImport
+builtins.add                            builtins.elemAt                         builtins.isFloat                        builtins.seq
+builtins.addDrvOutputDependencies       builtins.false                          builtins.isFunction                     builtins.sort
+# ...
+```
+
+`builtins.` and yeah I can see all the builtins, there is a whole bunch, there is builtins to check the 
+types of expressions, there's like builtins to map attribute sets, oh yeah, that's (`builtins.match`) a regex
+matching thing, string processings, `builtins.false` that's interesting, (`builtins.toJSON`), to json,
+there is also from json, to read json into a nix attribute set.
+
+Yeah, I think:
+
+```nix
+vim default.nix
+```
+
+Did I get the most of the nix, I don't know, maybe let's use a simple map here, 
 (`a = [ builtins.toString builtins.map builtins.partition ];`). Let's do like numbers one, two, three in a list,
 `a = [ 1 2 3 ];`, and let's do like a `builtins.map [ 1 2 3 ];`, and let's do like, let's give a function here,
 `builtins.map (x: [ 1 2 3];`, let's say like `x` plus one, `builtins.map (x: x + 1) [ 1 2 3 ];`, `in a;`, and so
