--- a/episodes/0/0.md
+++ b/episodes/0/0.md
@@ -994,7 +994,10 @@ functionDefaultsQuirk =
 
 ```nix
 ❯ nix-instantiate --eval --strict
-{ attributeSelectors = 10; attributeSelectors' = 30; booleanOps = true; checkForAttributes = true; floats = 0.666667; foo = null; "foo.bar" = null; fooz = { bar = null; }; functionDefaultsQuirk = false; functionMaybeArgument = 6; ifExpr = "Yes"; int = 0; interpolation = "Hello, Silvan Mosberger"; interpolation' = "Hello, Silvan Mosberger"; interpolation'' = "Hello, 30"; someFun = 2; someFun' = 3; someFunAttrs = 5; someFunAttrs' = 4; someFunAttrs'' = 4; toStringExample = ""; toStringExample' = "1"; variables = 11; }
+{ attributeSelectors = 10; attributeSelectors' = 30; booleanOps = true; checkForAttributes = true; floats = 0.666667; foo = null; "foo.bar" = null;
+fooz = { bar = null; }; functionDefaultsQuirk = false; functionMaybeArgument = 6; ifExpr = "Yes"; int = 0; interpolation = "Hello, Silvan Mosberger";
+interpolation' = "Hello, Silvan Mosberger"; interpolation'' = "Hello, 30"; someFun = 2; someFun' = 3; someFunAttrs = 5; someFunAttrs' = 4; someFunAttrs'' = 4;
+toStringExample = ""; toStringExample' = "1"; variables = 11; }
 ```
 
 Yeah, it's false, yeah and so that's a bit of a catch. 
@@ -1071,11 +1074,34 @@ Yeah, I think:
 vim default.nix
 ```
 
-Did I get the most of the nix, I don't know, maybe let's use a simple map here, 
-(`a = [ builtins.toString builtins.map builtins.partition ];`). Let's do like numbers one, two, three in a list,
-`a = [ 1 2 3 ];`, and let's do like a `builtins.map [ 1 2 3 ];`, and let's do like, let's give a function here,
-`builtins.map (x: [ 1 2 3];`, let's say like `x` plus one, `builtins.map (x: x + 1) [ 1 2 3 ];`, `in a;`, and so
-that works, adds x to all the numbers:
+Did I get the most of the nix, I don't know, maybe let's use a simple map here:
+
+```nix
+builtinFuns =
+  let
+    a = [ 1 2 3 ];
+  in null;
+```
+
+Let's do like numbers one, two, three in a list, and let's do like a `builtins.map`:
+
+```nix
+builtinFuns =
+  let
+    a = builtins.map [ 1 2 3 ];
+  in null;
+```
+
+and let's do like, let's give a function here:
+
+```nix
+builtinsFuns =
+  let
+    a = builtins.map (x: [ 1 2 3 ];
+  in null;
+```
+
+let's say like `x` plus one:
 
 ```nix
 builtinFuns =
@@ -1084,10 +1110,17 @@ builtinFuns =
   in a;
 ```
 
-It's fairly self-explanatory. There's also some weird thing where you don't actually need `builtins.` for some 
-builtins so map is one of them, `a = map (x: x + 1) [ 1 2 3 ];`, `map` is valid on it's own, so you'll see
-it sometimes just like that without any reference where does it come from. `toString` we saw that as well,
-`toString` doesn't need the `builtins.` but most builtins do need that prefix. 
+And so that works, adds `x` to all the numbers. It's fairly self-explanatory.
+There's also some weird thing where you don't actually need `builtins.` for some 
+builtins so map is one of them:
+
+```nix
+a = map (x: x + 1) [ 1 2 3 ]
+```
+
+`map` is valid on it's own, so you'll see it sometimes just like that without any reference
+where does it come from. `toString` we saw that as well, `toString` doesn't need the `builtins.`
+but most builtins do need that prefix. 
 
 Maybe, what do you think of this, are you confused about anything or do you have a good overview?
 
