--- a/episodes/0/0.md
+++ b/episodes/0/0.md
@@ -1137,22 +1137,40 @@ derivationBuiltin =
   in null;  
 ```
 
-There is the `builtins.derivation` and this creates a derivation and what is a derivation, it's a build recipe,
-and there's some very basic arguments that you need to pass to actually make that work. Let's see, if we just 
-do this we should get an error:
+There is the `builtins.derivation`:
 
 ```nix
 derivationBuiltin =
-  let 
+  let
     someDerivation = builtins.derivation {
-    
+
     };
-  in someDerivation;
+  in null;
 ```
 
+And this creates a derivation and what is a derivation, it's a build recipe, and there's some very basic 
+arguments that you need to pass to actually make that work. Let's see, if we just do this we should get an error:
+
 ```nix
-nix-instantiate --eval --strict
-error: attribute 'name' missing for call to 'derivationStrict'..
+❯ nix-instantiate --eval --strict
+error:
+       … while evaluating the attribute 'derivationBuiltin'
+         at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:117:3:
+          116|
+          117|   derivationBuiltin =
+             |   ^
+          118|     let
+
+       … while evaluating the attribute 'outPath'
+         at <nix/derivation-internal.nix>:44:9:
+           43|       value = commonAttrs // {
+           44|         outPath = builtins.getAttr outputName strict;
+             |         ^
+           45|         drvPath = strict.drvPath;
+
+       (stack trace truncated; use '--show-trace' to show the full, detailed trace)
+
+       error: attribute 'name' missing
 ```
 
 Attribute name missing for call, the error is again a bit messed up, but let's roll with it for now,
@@ -1168,12 +1186,29 @@ derivationBuiltin =
 ```
 
 ```nix
-nix-instantiate --eval --strict
-error: required attribute 'builder' missing
+❯ nix-instantiate --eval --strict
+error:
+       … while evaluating the attribute 'derivationBuiltin'
+         at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:117:3:
+          116|
+          117|   derivationBuiltin =
+             |   ^
+          118|     let
+
+       … while evaluating the attribute 'outPath'
+         at <nix/derivation-internal.nix>:44:9:
+           43|       value = commonAttrs // {
+           44|         outPath = builtins.getAttr outputName strict;
+             |         ^
+           45|         drvPath = strict.drvPath;
+
+       (stack trace truncated; use '--show-trace' to show the full, detailed trace)
+
+       error: required attribute 'builder' missing
 ```
 
 They also need a builder attribute. This says which binary will build the derivation, now this is a bit hacky here, I'm just
-gonna use `/bin/sh` which is one of the only binaries available in the sandbox on I think all systems:
+gonna use `/bin/sh` which is one of the only binaries available in the sandbox on I think all system:
 
 ```nix
 derivationBuiltin = 
@@ -1186,8 +1221,27 @@ derivationBuiltin =
 ```
 
 ```nix
-nix-instantiate --eval --strict
-error: required attribute 'system' missing..
+
+```nix
+❯ nix-instantiate --eval --strict
+error:
+       … while evaluating the attribute 'derivationBuiltin'
+         at /home/stablejoy/code/nix-hour-transcripts/episodes/0/default.nix:117:3:
+          116|
+          117|   derivationBuiltin =
+             |   ^
+          118|     let
+
+       … while evaluating the attribute 'outPath'
+         at <nix/derivation-internal.nix>:44:9:
+           43|       value = commonAttrs // {
+           44|         outPath = builtins.getAttr outputName strict;
+             |         ^
+           45|         drvPath = strict.drvPath;
+
+       (stack trace truncated; use '--show-trace' to show the full, detailed trace)
+
+       error: required attribute 'system' missing
 ```
 
 Um, then also a system is needed, `system =`, I'm gonna use `"x86_64-linux";` the system I'm on right now, so linux:
@@ -1204,11 +1258,14 @@ derivationBuiltin =
 ```
 
 ```nix
-nix-instantiate --eval --strict
+
+```nix
+❯ nix-instantiate --eval --strict
+{ attributeSelectors = 10; attributeSelectors' = 30; booleanOps = true; builtinFuns = [ 2 3 4 ]; checkForAttributes = true; derivationBuiltin = { all = [ «repeated» ]; builder = "/bin/sh"; drvAttrs = { builder = "/bin/sh"; name = "test"; system = "x86_64-linux"; }; drvPath = "/nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv"; name = "test"; out = «repeated»; outPath = "/nix/store/d62izaahds46siwr2b7k7q3gan6vw4p0-test"; outputName = "out"; system = "x86_64-linux"; type = "derivation"; }; floats = 0.666667; foo = null; "foo.bar" = null; fooz = { bar = null; }; functionDefaultsQuirk = false; functionMaybeArgument = 6; ifExpr = "Yes"; int = 0; interpolation = "Hello, Silvan Mosberger"; interpolation' = "Hello, Silvan Mosberger"; interpolation'' = "Hello, 30"; someFun = 2; someFun' = 3; someFunAttrs = 5; someFunAttrs' = 4; someFunAttrs'' = 4; toStringExample = ""; toStringExample' = "1"; variables = 11; }
 ```
 
-And now that actually works. We can't really see the xoutputs super well here, I wanna re-format this a bit,
-let me do like a, let's convert this entire attribute set into a let statement (goes to the top) and then add
+And now that actually works. We can't really see the outputs super well here, I wanna re-format this a bit,
+let me do like a, let's convert this entire attribute set into a let statement and then add
 an `in` at the end and do a `derivationBuiltin` here, so it will declare all the things we have above but only
 result in this `derivationBuiltin` thing:
 
@@ -1216,7 +1273,7 @@ result in this `derivationBuiltin` thing:
 # Attribute set
 let
   foo = null;
-  -- all the way to the end of default.nix`
+  # all the way to the end of file
 
   derivationBuiltin = 
     let
@@ -1230,8 +1287,8 @@ in derivationBuiltin
 ```
 
 ```nix
-nix-instantiate --eval --strict
-{ all = [ <<repeated>> ]; builder = "/bin/sh"; drvAttrs = { builder = "/bin/sh"; name = "test"; system =..
+❯ nix-instantiate --eval --strict
+{ all = [ «repeated» ]; builder = "/bin/sh"; drvAttrs = { builder = "/bin/sh"; name = "test"; system = "x86_64-linux"; }; drvPath = "/nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv"; name = "test"; out = «repeated»; outPath = "/nix/store/d62izaahds46siwr2b7k7q3gan6vw4p0-test"; outputName = "out"; system = "x86_64-linux"; type = "derivation"; }
 ```
 
 So yeah, we get this output, so what this really does underneath is that it takes all these arguments, calls
@@ -1239,61 +1296,85 @@ some internal nix primitive which creates a derivation in the actual store, that
 `drvPath = "/nix/store/y1s2..-test.drv";`, and it also tells us the output path, `outPath = "..";`, so this
 means when you build this derivation description and we can look at this, actually no we can't look at it yet because,
 oh, kind of a quirk, `--eval` evaluates it in like a read-only mode which doesn't write anything to the nix store.
-We can do `--read-write` mode to enable this, (`nix-instantiate --eval --strict --read-write`) I believe. Ok now
-we should be able to look at the store path here, we can just `cat /nix/store/y1s2..-test.drv` this path and it's
-like a kind of simple description of how derivation gets built, there is like output path where should the derivation
-put the result when it runs, what system is it in, the builder, and the environment (`("name", "test")`, ah actually
-not, the name out, some very basic things.
-
-Now we can call `nix-store -r`, this stands for `--realize`, you can call this to kind of manually build this derivation:
+We can do `--read-write` mode to enable this I believe. 
 
 ```nix
-> nix-store --realize /nix/store/y1s2..-test.drv
+❯ nix-instantiate --eval --strict --read-write-mode
+{ all = [ «repeated» ]; builder = "/bin/sh"; drvAttrs = { builder = "/bin/sh"; name = "test"; system = "x86_64-linux"; }; drvPath = "/nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv"; name = "test"; out = «repeated»; outPath = "/nix/store/d62izaahds46siwr2b7k7q3gan6vw4p0-test"; outputName = "out"; system = "x86_64-linux"; type = "derivation"; }
 ```
 
-Generally you don't need this but let's just go for it for now. If we try to build this it doesn't really do anything:
+Ok now we should be able to look at the store path here, we can just:
+
+```
+❯ cat /nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv
+Derive([("out","/nix/store/d62izaahds46siwr2b7k7q3gan6vw4p0-test","","")],[],[],"x86_64-linux","/bin/sh",[],[("builder","/bin/sh"),("name","test"),("out","/nix/store/d62izaahds46siwr2b7k7q3gan6vw4p0-test"),("system","x86_64-linux")])%
+```
+
+this path and it's like a kind of simple description of how derivation gets built, there is like 
+output path where should the derivation put the result when it runs, what system is it in, 
+the builder, and the environment (`("name", "test")`, ah actually not, the name out, some very basic things.
+
+Now we can call `nix-store -r`, this stands for `--realize`, we can call this to kind of manually build this derivation,
+you generally don't need this but let's just go for it for now:
 
 ```nix
+❯ nix-store --realise /nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv
 this derivation will be built:
-  /nix/store..-test.drv
-building...
-error: builder for ... failed to produced output path for output 'out' at ..
+  /nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv
+building '/nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv'...
+error: builder for '/nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv' failed to produce output path for output 'out' at '/nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv.chroot/root/nix/store/d62izaahds46siwr2b7k7q3gan6vw4p0-test'
 ```
 
-Nix throws an error because we just called bin shell, it doesn't write the output here. 
+If we try to build this it doesn't really do anything, nix throws an error because we just called 
+bin shell, it doesn't write the output here. 
+
+Okay? And so usually here, what we did now is this weird thing, `nix-instantiate --eval`, `--strict` isn't needed here:
 
 ```nix
-cat /nix/store/..-test.drv
-Derive([("out","/nix/store/d62..-test","","")]..
+❯ nix-instantiate --eval --read-write-mode
+{ all = <CODE>; builder = "/bin/sh"; drvAttrs = { builder = "/bin/sh"; name = "test"; system = "x86_64-linux"; }; drvPath = <CODE>; name = "test"; out = «repeated»; outPath = <CODE>; outputName = "out"; system = "x86_64-linux"; type = "derivation"; }
 ```
 
-Okay? And so usually here, what we did now is this weird thing, `nix-instantiate --eval`, `--strict` isn't needed here,
-`nix-instantiate --eval --read-write-mode` and this can then be copied, actually we do need `--strict`, then we 
-copy the `..-test.drv` path, it's super convoluted and then we like the, `nix-store --realize ..`. Easier way, you
+and this can then be copied, actually we do need `--strict`:
+
+```nix
+❯ nix-instantiate --eval --strict --read-write-mode
+{ all = [ «repeated» ]; builder = "/bin/sh"; drvAttrs = { builder = "/bin/sh"; name = "test"; system = "x86_64-linux"; }; drvPath = "/nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv"; name = "test"; out = «repeated»; outPath = "/nix/store/d62izaahds46siwr2b7k7q3gan6vw4p0-test"; outputName = "out"; system = "x86_64-linux"; type = "derivation"; }
+```
+
+then we copy the `drvPath`, it's super convoluted and then we like the, `nix-store --realize ..`. Easier way, you
 can just do `nix-build`, that's really just what nix build does. And so if you do that it will evaluate it and try
-to build it in one step.
+to build it in one step:
+
+```nix
+❯ nix-build
+this derivation will be built:
+  /nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv
+building '/nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv'...
+error: builder for '/nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv' failed to produce output path for output 'out' at '/nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv.chroot/root/nix/store/d62izaahds46siwr2b7k7q3gan6vw4p0-test'
+```
 
 And so, also I think we can just nix instantiate it to get the derivation path
 
 ```nix
-nix-instantiate
+❯ nix-instantiate
 warning: you did not specify '--add-root'; the result might be removed by the garbage collector
-/nix/store/y1..-test.drv
+/nix/store/y1s2fiq89v2h9vkb38w508ir20dwv6v2-test.drv
 ```
 
-So nix instantiate just kind of instantiates the derivation. Instantiating means to evaluate a derivation and
+Yeah, so nix instantiate just kind of instantiates the derivation. Instantiating means to evaluate a derivation and
 produce it in the store, so that this file, (`/nix/store/..-test.drv`), actually exists. `nix-build` is essentially
 just:
 
-```nix
-nix-build = nix-instantiate + nix-store --realize
+```
+> nix-build = nix-instantiate + nix-store --realize
 ```
 
 It first creates a derivation, and then tries to realize or slash build the derivation. And so let's try to fix this 
 derivation in here, there's other arguments we can pass, there's some special ones, like `args` where we can provide
 arguments to the builder, (`args = [ " `), and in here we're gonna do `-c` and like this maybe, `> $out"`:
 
-```nix
+```nix 
 -- ..
 builder = "/bin/sh";
 args = [ "-c" "> $out" ];
@@ -1304,6 +1385,8 @@ system = "x86_64-linux";
 So this says, shell, take a script, execute the script, and the script writes an empty file to the `out` variable, and 
 in the builder the out environment variable points to the output path that nix wants you to write stuff and so this
 should at least produce an empty result and build properly, let's see, that's super slow for some reason. Okay, it worked.
+
+timestamp
 
 ```nix
 > nix-build
