0th derivations update

--- a/episodes/0/0.md
+++ b/episodes/0/0.md
@@ -1375,30 +1375,61 @@ derivation in here, there's other arguments we can pass, there's some special on
 arguments to the builder, (`args = [ " `), and in here we're gonna do `-c` and like this maybe, `> $out"`:
 
 ```nix 
--- ..
+# ..
 builder = "/bin/sh";
 args = [ "-c" "> $out" ];
 system = "x86_64-linux";
--- ..
+# ..
 ```
 
 So this says, shell, take a script, execute the script, and the script writes an empty file to the `out` variable, and 
 in the builder the out environment variable points to the output path that nix wants you to write stuff and so this
-should at least produce an empty result and build properly, let's see, that's super slow for some reason. Okay, it worked.
-
-timestamp
+should at least produce an empty result and build properly, let's see, that's super slow for some reason.
 
 ```nix
-> nix-build
+❯ nix-build
 this derivation will be built:
+  /nix/store/qvryn0lpyyizpqn55i9fdklb5l3d97b6-test.drv
+building '/nix/store/qvryn0lpyyizpqn55i9fdklb5l3d97b6-test.drv'...
+/nix/store/nfb1lb8dd7wxn0g9cccq2a9zf8dk219a-test
 ```
 
-So we can `ls` this (`/nix/store/..-test.drv`) I guess but it won't show anything because we didn't try anything but now
+Okay, it worked. So we can `ls` this:
+
+```nix
+❯ ls /nix/store/nfb1lb8dd7wxn0g9cccq2a9zf8dk219a-test
+/nix/store/nfb1lb8dd7wxn0g9cccq2a9zf8dk219a-test
+```
+
+I guess but it won't show anything because we didn't try anything but now
 here (`vim default.nix`), we can of course do anything we want, well of course there's more complicated things, but for now,
 let's do like a, can I do like.. would that work? (`args = [ "-c" "> $out <<< foo" ];`, I'm not sure that's valid shell,
 `nix-build`, nope, that doesn't work. Well I don't know how to write to a file, bin shell, well I guess that can work, like
-a `echo foo > $out`, all right, `nix-build`, `ls` as before, it's a file, but yeah, if we do a `cat /nix/store..-test.drv` we 
-get `foo` now.
+a `echo foo > $out`:
+
+```nix
+# ...
+args = [ "-c" "echo foo > $out" ];
+# ...
+```
+
+all right, `nix-build`:
+
+```nix
+❯ nix-build
+this derivation will be built:
+  /nix/store/m39qk3qwlkia92ff6nvl413qncjb5aaz-test.drv
+building '/nix/store/m39qk3qwlkia92ff6nvl413qncjb5aaz-test.drv'...
+/nix/store/ca1cisb8cy6v2y2m8fm4vy1ac270i3gb-test
+```
+
+`ls` as before, it's a file, but yeah, if we do a `cat` we get `foo` now:
+
+```nix
+❯ cat /nix/store/ca1cisb8cy6v2y2m8fm4vy1ac270i3gb-test
+foo
+```
+timestamp 37.25
 
 And so when you `nix-build` it puts a result symlink in your current directory, `result -> /nix/store..-test`, pointing 
 to the thing it just built. As this way you can just `cat result` as well and inspect the result this way. It's not
