--- a/episodes/0/0.md
+++ b/episodes/0/0.md
@@ -1429,11 +1429,22 @@ building '/nix/store/m39qk3qwlkia92ff6nvl413qncjb5aaz-test.drv'...
 ❯ cat /nix/store/ca1cisb8cy6v2y2m8fm4vy1ac270i3gb-test
 foo
 ```
-timestamp 37.25
 
-And so when you `nix-build` it puts a result symlink in your current directory, `result -> /nix/store..-test`, pointing 
-to the thing it just built. As this way you can just `cat result` as well and inspect the result this way. It's not
-always result so you need to watch how to, like there is some special features that change the output link name.
+And so when you `nix-build` it puts a result symlink in your current directory:
+
+```nix
+result -> /nix/store/ca1cisb8cy6v2y2m8fm4vy1ac270i3gb-test
+```
+
+pointing to the thing it just built. As this way you can just:
+
+```
+cat result
+foo
+```
+
+as well and inspect the result this way. It's not always result so you need to watch how to,
+like there is some special features that change the output link name.
 
 So this is how underneath you'd build a derivation but you kind of never need to do this yourself, because, well for one,
 it's really, like `/bin/sh` doesn't really work that well. You want to use more complicated things, and this build runs in 
@@ -1442,7 +1453,9 @@ where nix packages comes in play. Nix packages is the package collection of nix 
 specified there already and within them, they kind of don't use bin shell underneath I believe, but they kind of
 build up this entire tree of packages from like some bootstrap binary up to kind of all the things you want to use 
 on your pc like firefox, terminals, everything. And it also contains builders for derivations that make this much 
-simpler. So let's see, let's get a nixpkgs in here, it's actually also good kind of lead into some other features,
+simpler.
+
+So let's see, let's get a nixpkgs in here, it's actually also good kind of lead into some other features,
 right imports, we didn't talk about imports yet, but yeah, so let's use another builtins, that's `builtins.fetchTarball`:
 
 ```nix
@@ -1455,6 +1468,8 @@ I'm gonna go to nix packages, like get a tarball for that, actually let's just u
 ```nix
 nixpkgs = builtins.fetchTarball "https://github.com/NixOS/nixpkgs/archive/master.tar.gz";
 ```
+
+timestamp
 
 Generally not recommended, because this changes over time, generally you want to use pure fetchers, but yeah,
 so nix packages, we can look at this, we can evaluate this `nix-instantiate --eval`:
